Fix Java compatibility: downgrade to Java 17 and fix getFirst() method usage